<resources>

    <string name="app_name">挑挑夹</string>
    <string name="title">挑 挑 夹</string>
    <string name="start">对战</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="wifi_connect">WIFI联机</string>
    <string name="done">完成</string>
    <string name="back">返回</string>
    <string name="help_content">\u3000\u3000移动至对方两个棋子之间可以挑掉这两个，移动棋子夹住对方棋子则可以吃掉这个。</string>
	<string name="reset">复位</string>
	<string name="regret">悔棋</string>
	<string name="version">V 0.8.6</string>
	
</resources>