<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttongroup"
        android:layout_marginBottom="30dp" >

        <TextView
            style="@style/common_title_2"
            android:text="@string/title"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

   <LinearLayout
        android:id="@+id/buttongroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/start"
            style="@style/common_btn_style_big"
            android:text="@string/start" />

        <Button
            android:id="@+id/setting"
            style="@style/common_btn_style_big"
            android:layout_marginTop="25dp"
            android:text="@string/setting" />

        <Button
            android:id="@+id/help"
            style="@style/common_btn_style_big"
            android:layout_marginTop="25dp"
            android:text="@string/help" />

        <Button
            android:id="@+id/wifi_connect"
            style="@style/common_btn_style_big"
            android:layout_marginTop="25dp"
            android:text="@string/wifi_connect" />

    </LinearLayout>

    <TextView 
        style="@style/common_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/version"/>

</RelativeLayout>
