<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark" >"

	<RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/title_bg" >

        <TextView
            style="@style/common_title"
            android:text="@string/help"
            android:layout_centerInParent="true" />
        
        <Button 
            android:id="@+id/back"
            style="@style/common_btn_style_big"
            android:text="@string/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:visibility="gone" />
                
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <TextView
	        android:id="@+id/content"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:lineSpacingExtra="5dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="20dp"
	        android:textSize="20sp"
	        android:textColor="@android:color/white"
	        android:text="@string/help_content" />
        
    </RelativeLayout>

</LinearLayout>
