<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:gravity="center"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonbar"
        android:layout_below="@+id/text" >

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <com.jumpjump.MainBgView
                android:id="@+id/mainbgview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.jumpjump.MainView
                android:id="@+id/mainview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView 
                android:id="@+id/selectedChess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="the selected chessman"/>
        </FrameLayout>

        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/container">
            <ImageView 
                android:id="@+id/currentChess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_centerVertical="true"/>

            <ListView 
                android:id="@+id/chessRecordList"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true" >

            <Button
                android:id="@+id/button1"
                style="@style/common_btn_style"
                android:text="@string/reset" />

            <Button
                android:id="@+id/button2"
                style="@style/common_btn_style"
                android:layout_marginLeft="10dp"
                android:text="@string/setting" />

            <Button
                android:id="@+id/button3"
                style="@style/common_btn_style"
                android:layout_marginLeft="10dp"
                android:text="@string/help" />

            <Button
                android:id="@+id/button4"
                style="@style/common_btn_style"
                android:layout_marginLeft="10dp"
                android:text="@string/regret" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>